--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,3 +57,13 @@
 .add_email{
   padding-left: 4px;
 }
+.front_img{
+  height: 200px;
+
+
+}
+
+.separate_page{
+  text-align: center;
+  margin-left: 40%
+}
