--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -67,3 +67,18 @@
   text-align: center;
   margin-left: 40%
 }
+
+.empty_text{
+  margin-top: 25px;
+}
+
+.empty_image{
+  height: 40%;
+  width: 40%;
+}
+
+.delete_img
+{
+  height: 2%;
+  width: 12%;
+}
